# cert-drill

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  llms.txt
.github/workflows/: ci.yml  release.yml
exams/aws-aif-c01/: answers.toml  exam.toml  flashcards-concepts.md  flashcards.md  questions.md
exams/aws-dva-c02/: answers.toml  exam.toml  flashcards-concepts.md  flashcards.md  questions.md
exams/aws-mla-c01/: answers.toml  exam.toml  flashcards-concepts.md  flashcards.md  questions.md
exams/aws-saa-c03/: answers.toml  exam.toml  flashcards-concepts.md  flashcards.md  questions.md
src/: cli.rs  exam.rs  flashcard.rs  grader.rs  import.rs  main.rs  paths.rs  render.rs  session.rs  tracker.rs
tests/: integration_test.sh
tests/fixtures/: answers-attempt1.md  answers-attempt2.md
tests/fixtures/test-exam/: answers.toml  exam.toml  flashcards.md  questions.md
